# netchat

./: .gitignore  Makefile  README.md  netchat.py  pyproject.toml  pytest.ini  script  setup.cfg  tox.ini
examples/: login.py  wait.py
netchat/: __init__.py  cli.py  connection.py  constant.py  exception.py  netchat.py  script.py  session.py
scripts/: find-dups  find-numbers  pypi_version
tests/: conftest.py  script  server  test_netchat.py  test_object.py
