[metadata]
name = netchat
version = attr: netchat.__version__
description =  netchat connects to a listening tcp port, waits for text and sends responses
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False    
include_package_data = True
# start-modules
install_requires =
  click
  pexpect 

[options.extras_require]
test =  
  pytest
  pytest-click

# end-modules

[options.package_data]
* =
  VERSION
  LICENSE

[options.entry_points]
console_scripts = 
  netchat = netchat.netchat:netchat
