[bumpversion]
current_version = 0.1.1
tag-name = "v{new_version}"
tag-message = "Release {new_version}"
tag = True
commit = True

[metadata]
name = netchat
version = attr: netchat.__version__
description = netchat connects to a listening tcp port, waits for text and sends responses
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
zip_safe = False
include_package_data = True
install_requires = 
	click
	pexpect

[options.extras_require]
test = 
	pytest
	pytest-click
	tox
dev = 
	bumpversion
	twine
	yapf
	python-dotenv
docs = 
	sphinx

[options.package_data]
* = 
	VERSION
	LICENSE

[options.entry_points]
console_scripts = 
	netchat = netchat.netchat:netchat

[bumpversion:file:VERSION]

[bumpversion:file:netchat/__init__.py]
